<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCourse"
            style="@style/Style.StudBuddy.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/course_screen_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- GPA Summary Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardGpaSummary"
            style="@style/Style.StudBuddy.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/card_padding">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewGpaSummaryLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_gpa_label"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/textViewGpaValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="@color/colorPrimary"
                        android:textSize="36sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTotalCreditsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="0 credits"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/text_size_small" />

                    <TextView
                        android:id="@+id/textViewActiveSemesterName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/semester_none_active"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="@dimen/text_size_caption" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Semester Filter Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/spacing_small"
                android:text="Semester:"
                android:textColor="@color/colorTextSecondary"
                android:textSize="13sp" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/layoutSemesterChips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!-- chips added programmatically -->
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <!-- Course List -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCourses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="72dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/textViewEmptyCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/spacing_large"
                android:textColor="@color/colorEmptyState"
                android:textSize="@dimen/text_size_subtitle"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_large"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_add"
        app:tint="@color/colorTextOnPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>